--- a/index.html
+++ b/index.html
@@ -4,25 +4,23 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-		<title>Web Developer, Mobile Game Developer </title>
+		<title>Learn Game Development at ZENVA.com</title>
 
 		<style>
 		  body {
 		  	background-color: black;
 		    padding: 0px;
 		    margin: 0px;
-			font-family: 'Press Start 2P', cursive;
 		  }
 		  </style>
 	</head>
 
 	<body>  
 		<script type="text/javascript" src="js/phaser.js"></script>
-		<script type="text/javascript" src="js/states/GameTitle.js"></script>
 		<script type="text/javascript" src="js/states/Boot.js"></script>
 		<script type="text/javascript" src="js/states/Preload.js"></script>
 		<script type="text/javascript" src="js/states/Game.js"></script>
-		<script src="js/scaler.js"></script>
+        <script src="js/scaler.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
