Update page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-		<title>Learn Game Development at ZENVA.com</title>
+		<meta name="description" content="Ping Zhang - Web Developer, Front End Developer">
+	<meta name="keywords" content="Ping Zhang - Web Developer, Front End Developer, Wordpress, Wordpress Developer, Wordpress Designer, CSS, HTML, jQuery, AJAX, PHP, Web master, Front End Developer, Client Side architect, CSS3, HTML5, Javascript">	
+
+		<title>Ping Zhang - Web Developer, Front End Developer</title>
 
 		<style>
 		  body {
