Add about state map

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
 		    padding: 0px;
 		    margin: 0px;
 		  }
+		  
+		  @font-face{
+			font-family:'KenVector Future Thin';
+			src:url('assets/fonts/ken-fonts/kenvector_future_thin.ttf');
+		  }
 		  </style>
 	</head>
 
 	<body>  
+		<div style="font:'KenVector Future Thin';">.</div>
 		<script type="text/javascript" src="js/phaser.js"></script>
 		<script type="text/javascript" src="js/states/Boot.js"></script>
 		<script type="text/javascript" src="js/states/Preload.js"></script>
