--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<script type="text/javascript" src="js/phaser.js"></script>
 		<script type="text/javascript" src="js/states/Boot.js"></script>
 		<script type="text/javascript" src="js/states/Preload.js"></script>
+		<script type="text/javascript" src="js/states/Home.js"></script>
 		<script type="text/javascript" src="js/states/Game.js"></script>
         <script src="js/scaler.js"></script>
 		<script src="js/main.js"></script>
