--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		
 		
 		<script type="text/javascript" src="js/phaser.js"></script>
+		<script type="text/javascript" src="js/phaser-debug.js"></script>
 		<script type="text/javascript" src="js/states/Boot.js"></script>
 		<script type="text/javascript" src="js/states/Preload.js"></script>
 		<script type="text/javascript" src="js/states/Home.js"></script>
